added feature 1 code

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "29c6e0f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from os.path import join\n",
-    "from json import load"
+    "from json import loads\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -30,12 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "122f0e37",
    "metadata": {},
    "outputs": [],
    "source": [
     "DATABASE_NAME = join('.', \"farmers-protest-tweets-2021-03-5.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444f6650",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "40705ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RefInt:\n",
+    "    def __init__(self, reference):\n",
+    "        self.ref = reference\n",
+    "    def __lt__(self, other):\n",
+    "        return self.ref < other.ref"
    ]
   },
   {
@@ -56,13 +79,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "79869624",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to RefInt.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m n, url \u001b[38;5;129;01min\u001b[39;00m top10:\n\u001b[0;32m     26\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m8d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 27\u001b[0m \u001b[43mtop10_retweets\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36mtop10_retweets\u001b[1;34m()\u001b[0m\n\u001b[0;32m     24\u001b[0m         loads(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mline\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m,  object_hook\u001b[38;5;241m=\u001b[39mhook)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n, url \u001b[38;5;129;01min\u001b[39;00m top10:\n\u001b[1;32m---> 26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m8d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to RefInt.__format__"
+     ]
+    }
+   ],
    "source": [
     "def top10_retweets():\n",
-    "    pass"
+    "    top10 = list()\n",
+    "    ints = dict()\n",
+    "    def hook(dict_):\n",
+    "        if type(dict_) != dict:\n",
+    "            return dict_\n",
+    "        if \"url\" in dict_ and \"retweetCount\" in dict_:\n",
+    "            url = dict_[\"url\"]\n",
+    "            retwcount = dict_[\"retweetCount\"]\n",
+    "            if url not in ints:\n",
+    "                ints[url] = RefInt(retwcount)\n",
+    "                top10.append((ints[url], url))\n",
+    "            elif ints[url].ref < retwcount:\n",
+    "                ints[url].ref = retwcount\n",
+    "                if (ints[url], url) not in top10:\n",
+    "                    top10.append((ints[url], url))\n",
+    "            else:\n",
+    "                return {}\n",
+    "            top10.sort(reverse=True)\n",
+    "            del top10[10:]\n",
+    "            return {}\n",
+    "    with open(DATABASE_NAME, \"r\", encoding=\"utf-8\") as file:\n",
+    "        for line in file:\n",
+    "            loads(f'{line.strip()}',  object_hook=hook)\n",
+    "    for n, url in top10:\n",
+    "        print(f\"{n-ref:8d}, {url}\")\n",
+    "top10_retweets()"
    ]
   },
   {
