--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -40,17 +40,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "444f6650",
+   "cell_type": "markdown",
+   "id": "13139f5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## classes"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "40705ba0",
+   "id": "6be02c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,20 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "79869624",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to RefInt.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m n, url \u001b[38;5;129;01min\u001b[39;00m top10:\n\u001b[0;32m     26\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m8d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 27\u001b[0m \u001b[43mtop10_retweets\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36mtop10_retweets\u001b[1;34m()\u001b[0m\n\u001b[0;32m     24\u001b[0m         loads(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mline\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m,  object_hook\u001b[38;5;241m=\u001b[39mhook)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n, url \u001b[38;5;129;01min\u001b[39;00m top10:\n\u001b[1;32m---> 26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m8d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to RefInt.__format__"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  904547, https://twitter.com/MrBeast/status/1362997215308906498\n",
+      "  315557, https://twitter.com/rihanna/status/1356625889602199552\n",
+      "  236683, https://twitter.com/pulte/status/1365015962433564675\n",
+      "  152380, https://twitter.com/rihanna/status/254929287726116864\n",
+      "  137786, https://twitter.com/Twitter/status/1357000724593442816\n",
+      "  123338, https://twitter.com/KingSalman/status/1330103721506840578\n",
+      "  116239, https://twitter.com/elonmusk/status/1358542364948668418\n",
+      "  115492, https://twitter.com/elonmusk/status/1357244295091208193\n",
+      "  111737, https://twitter.com/rihanna/status/1351997615328661506\n",
+      "  103960, https://twitter.com/GretaThunberg/status/1356694884615340037\n"
      ]
     }
    ],
@@ -122,8 +126,7 @@
     "        for line in file:\n",
     "            loads(f'{line.strip()}',  object_hook=hook)\n",
     "    for n, url in top10:\n",
-    "        print(f\"{n-ref:8d}, {url}\")\n",
-    "top10_retweets()"
+    "        print(f\"{n.ref:8d}, {url}\")"
    ]
   },
   {
