--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13139f5c",
+   "id": "e284b5c4",
    "metadata": {},
    "source": [
     "## classes"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6be02c96",
+   "id": "e7af2d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,13 +139,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "e5af87ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number  | user id\n",
+      "    7134, 980633168981061632\n",
+      "    2091, 69027875\n",
+      "    1991, 2930682630\n",
+      "    1841, 452391771\n",
+      "    1806, 1354532795847073796\n",
+      "    1722, 48085084\n",
+      "    1502, 872085660886282240\n",
+      "    1460, 1340186972615307264\n",
+      "    1453, 1309302936317636608\n",
+      "    1446, 921732117024919552\n"
+     ]
+    }
+   ],
    "source": [
     "def top10_twit_senders():\n",
-    "    pass"
+    "    top10 = list()\n",
+    "    twits = defaultdict(set)\n",
+    "    def hook(dict_):\n",
+    "        if type(dict_) != dict:\n",
+    "            return dict_\n",
+    "        elif \"id\" in dict_ and \"user\" in dict_:\n",
+    "            ret = {\n",
+    "                \"id\": dict_[\"id\"]\n",
+    "            }\n",
+    "            if \"user\" in dict_:\n",
+    "                ret.update({\"user\": dict_[\"user\"][\"id\"]})\n",
+    "            return ret\n",
+    "        elif \"id\" in dict_:\n",
+    "            return {\n",
+    "                \"id\": dict_[\"id\"]\n",
+    "            }\n",
+    "    with open(DATABASE_NAME, \"r\", encoding=\"utf-8\") as file:\n",
+    "        for line in file.readlines():\n",
+    "            data = loads(f'{line.strip()}',  object_hook=hook)\n",
+    "            twits[data[\"user\"]].add(data[\"id\"])\n",
+    "    top = [(len(set_), user) for user, set_ in twits.items()]\n",
+    "    top.sort(reverse=True)\n",
+    "    return ((\"number   | user id\"), top)"
    ]
   },
   {
