updated return of function

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "79869624",
    "metadata": {},
    "outputs": [
@@ -87,16 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  904547, https://twitter.com/MrBeast/status/1362997215308906498\n",
-      "  315557, https://twitter.com/rihanna/status/1356625889602199552\n",
-      "  236683, https://twitter.com/pulte/status/1365015962433564675\n",
-      "  152380, https://twitter.com/rihanna/status/254929287726116864\n",
-      "  137786, https://twitter.com/Twitter/status/1357000724593442816\n",
-      "  123338, https://twitter.com/KingSalman/status/1330103721506840578\n",
-      "  116239, https://twitter.com/elonmusk/status/1358542364948668418\n",
-      "  115492, https://twitter.com/elonmusk/status/1357244295091208193\n",
-      "  111737, https://twitter.com/rihanna/status/1351997615328661506\n",
-      "  103960, https://twitter.com/GretaThunberg/status/1356694884615340037\n"
+      "('number   | url', ((904547, 'https://twitter.com/MrBeast/status/1362997215308906498'), (315557, 'https://twitter.com/rihanna/status/1356625889602199552'), (236683, 'https://twitter.com/pulte/status/1365015962433564675'), (152380, 'https://twitter.com/rihanna/status/254929287726116864'), (137786, 'https://twitter.com/Twitter/status/1357000724593442816'), (123338, 'https://twitter.com/KingSalman/status/1330103721506840578'), (116239, 'https://twitter.com/elonmusk/status/1358542364948668418'), (115492, 'https://twitter.com/elonmusk/status/1357244295091208193'), (111737, 'https://twitter.com/rihanna/status/1351997615328661506'), (103960, 'https://twitter.com/GretaThunberg/status/1356694884615340037')))\n"
      ]
     }
    ],
@@ -125,8 +116,7 @@
     "    with open(DATABASE_NAME, \"r\", encoding=\"utf-8\") as file:\n",
     "        for line in file:\n",
     "            loads(f'{line.strip()}',  object_hook=hook)\n",
-    "    for n, url in top10:\n",
-    "        print(f\"{n.ref:8d}, {url}\")"
+    "    return (\"number   | url\", tuple((n.ref, url) for n, url in top10))"
    ]
   },
   {
