uploaded feature 3 code

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -188,13 +188,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "2807f8f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('number   | date',\n",
+       " [(1379, '2020-11-29'),\n",
+       "  (1279, '2021-02-03'),\n",
+       "  (1269, '2020-12-03'),\n",
+       "  (1128, '2021-02-04'),\n",
+       "  (988, '2020-12-01'),\n",
+       "  (958, '2020-11-30'),\n",
+       "  (849, '2020-12-04'),\n",
+       "  (782, '2020-12-02'),\n",
+       "  (587, '2021-02-05'),\n",
+       "  (562, '2020-11-28')])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def top10_twit_days():\n",
-    "    pass"
+    "    top10 = list()\n",
+    "    twits = set()\n",
+    "    days = defaultdict(set)\n",
+    "    def hook(dict_):\n",
+    "        if type(dict_) != dict:\n",
+    "            return dict_\n",
+    "        elif \"id\" in dict_ and \"created\" in dict_:\n",
+    "            ret = {\n",
+    "                \"id\": dict_[\"id\"]\n",
+    "            }\n",
+    "            if dict_[\"id\"] in twits:\n",
+    "                return {}\n",
+    "            if \"created\" in dict_:\n",
+    "                if not dict_[\"created\"]:\n",
+    "                    return {}\n",
+    "                ret.update({\"created\": dict_[\"created\"].split(\"T\")[0]})\n",
+    "            days[dict_[\"created\"].split(\"T\")[0]].add(dict_[\"id\"])\n",
+    "            twits.add(dict_[\"id\"])\n",
+    "            return ret\n",
+    "    with open(DATABASE_NAME, \"r\", encoding=\"utf-8\") as file:\n",
+    "        for line in file.readlines():\n",
+    "            loads(f'{line.strip()}',  object_hook=hook)\n",
+    "    top = [(len(set_), user) for user, set_ in days.items()]\n",
+    "    top.sort(reverse=True)\n",
+    "    return ((\"number   | date\"), top[:10])"
    ]
   },
   {
