fixed output in feature 2

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -175,7 +175,7 @@
     "            twits[data[\"user\"]].add(data[\"id\"])\n",
     "    top = [(len(set_), user) for user, set_ in twits.items()]\n",
     "    top.sort(reverse=True)\n",
-    "    return ((\"number   | user id\"), top)"
+    "    return ((\"number   | user id\"), top[10:])"
    ]
   },
   {
