--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -252,13 +252,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "1f7bf4f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('number   | Hashtag', [(354100, '#farmersprotest'), (15084, '#istandwithfarmers'), (9478, '#farmersareindia'), (9285, '#indianfarmershumanrights'), (9174, '#standwithfarmers'), (8323, '#rihanna'), (7868, '#farmers'), (7865, '#farmersprotests'), (5181, '#shameonbollywood'), (4933, '#india')])\n"
+     ]
+    }
+   ],
    "source": [
     "def top10_hashtags():\n",
-    "    pass"
+    "    top10 = list()\n",
+    "    hashtags = defaultdict(set)\n",
+    "    def hook(dict_):\n",
+    "        if type(dict_) != dict:\n",
+    "            return dict_\n",
+    "        elif \"url\" in dict_ and \"content\" in dict_:\n",
+    "            ret = {\n",
+    "                \"id\": dict_[\"id\"]\n",
+    "            }\n",
+    "            if \"content\" in dict_:\n",
+    "                ret.update({\"content\": dict_[\"content\"]})\n",
+    "            return ret\n",
+    "        elif \"id\" in dict_:\n",
+    "            return {\n",
+    "                \"id\": dict_[\"id\"]\n",
+    "            }\n",
+    "    with open(DATABASE_NAME, \"r\", encoding=\"utf-8\") as file:\n",
+    "        for line in file.readlines():\n",
+    "            data = loads(f'{line.strip()}',  object_hook=hook)\n",
+    "            twit_hashtags = list()\n",
+    "            current = \"\"\n",
+    "            in_hashtag = False\n",
+    "            for c in data[\"content\"]:\n",
+    "                if \"#\" == c:\n",
+    "                    in_hashtag = True\n",
+    "                elif c == \" \":\n",
+    "                    if in_hashtag:\n",
+    "                        twit_hashtags.append(\"#\"+current)\n",
+    "                        current = \"\"\n",
+    "                    in_hashtag = False\n",
+    "                else:\n",
+    "                    if in_hashtag:\n",
+    "                        current += c\n",
+    "            if in_hashtag:\n",
+    "                twit_hashtags.append(\"#\"+current)\n",
+    "            for hashtag in twit_hashtags:\n",
+    "                hashtags[hashtag.lower()].add(data[\"id\"])\n",
+    "    top = [(len(set_), user) for user, set_ in hashtags.items()]\n",
+    "    top.sort(reverse=True)\n",
+    "    return ((\"number   | Hashtag\"), top[:10])"
    ]
   },
   {
