added main function code

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -324,7 +324,21 @@
    "outputs": [],
    "source": [
     "def Main():\n",
-    "    pass"
+    "    functions = {\"1\": top10_retweets, \"2\": top10_twit_senders, \"3\": top10_twit_days, \"4\": top10_hashtags}\n",
+    "    while True:\n",
+    "        print(\"choose an action\")\n",
+    "        print(\"[1] top 10 most retweeted tweets\")\n",
+    "        print(\"[2] top 10 users with most tweets\")\n",
+    "        print(\"[3] top 10 days with most tweets\")\n",
+    "        print(\"[4] top 10 most used hashtags\")\n",
+    "        input_ = input(\"$>\").strip()\n",
+    "        if input_ not in functions:\n",
+    "            break\n",
+    "        for out1, out2 in functions[input_]:\n",
+    "            print(out1)\n",
+    "            for out21, out22 in out2:\n",
+    "                print(f\"{out21:8d} | {out22}\")\n",
+    "    print(\"goodbye\")"
    ]
   },
   {
