fixed iteration in main function

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -334,10 +334,10 @@
     "        input_ = input(\"$>\").strip()\n",
     "        if input_ not in functions:\n",
     "            break\n",
-    "        for out1, out2 in functions[input_]:\n",
-    "            print(out1)\n",
-    "            for out21, out22 in out2:\n",
-    "                print(f\"{out21:8d} | {out22}\")\n",
+    "        out1, out2 = functions[input_]:\n",
+    "        print(out1)\n",
+    "        for out21, out22 in out2:\n",
+    "            print(f\"{out21:8d} | {out22}\")\n",
     "    print(\"goodbye\")"
    ]
   },
