added print referencing end of loop

--- a/main_program.ipynb
+++ b/main_program.ipynb
@@ -331,10 +331,11 @@
     "        print(\"[2] top 10 users with most tweets\")\n",
     "        print(\"[3] top 10 days with most tweets\")\n",
     "        print(\"[4] top 10 most used hashtags\")\n",
+    "        print(\"[any other] Exit\")\n",
     "        input_ = input(\"$>\").strip()\n",
     "        if input_ not in functions:\n",
     "            break\n",
-    "        out1, out2 = functions[input_]:\n",
+    "        out1, out2 = functions[input_]()\n",
     "        print(out1)\n",
     "        for out21, out22 in out2:\n",
     "            print(f\"{out21:8d} | {out22}\")\n",
